# api-expenses

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
app/: database.py  main.py  models.py  security.py  settings.py
app/crud/: category_crud.py  expenses_crud.py  insigths_services.py  monthlyincome_crud.py  users_crud.py
app/routes/: auth.py  category.py  expense_classifier.py  expenses.py  insights.py  monthly_income.py  users.py
app/schemas/: basemodel_config.py  category_schema.py  classifier_schema.py  expense_classifier.py  expenses_schemas.py  insights_schema.py  monthlyincome_schema.py  user_schema.py
app/services/: ai_classifier.py  expenses_sevices.py  insigths_services.py
migrations/: env.py
migrations/versions/: 46f06b373287_criando_tabelas_para_expenses.py  477f59082242_primeira_migrate.py  497aaa577406_adicionando_tabelas_de_monthly_incomes.py  8c4c7bc77c2f_create_table_users.py  9451d6ef8600_adicionando_coluna_title.py  b6e8409cb9ac_create_table_usersv2.py
tests/: test_users.py
